--- a/assets/css/now-playing.css
+++ b/assets/css/now-playing.css
@@ -5,7 +5,7 @@
         height: 100%;
         width: 100%;
         z-index: 4;
-        padding: 30px 10px;
+        padding: 10px 10px;
         font-size: 18px;
         display: flex;
         flex-direction: column;
